examples/test/testpolicy9146.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9146
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key48: value16
      key25: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value16
      podSelector:
        matchLabels:
          key27: value2
          key15: value30
